[metadata]
name = example
version = 0.1.0
author = Brimaz
author_email = brimaz@oreskos.com
description = A template repository for jump-starting development of Python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrimazOfOreskos/x-python
project_urls =
    Bug Tracker = https://github.com/BrimazOfOreskos/x-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
