[metadata]
name = example
version = 0.0.0
author = Brimaz
author_email = brimaz@oreskos.com
description = A template repository for jump-starting development of Python/Flask web services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrimazOfOreskos/x-python-flask
project_urls =
    Bug Tracker = https://github.com/BrimazOfOreskos/x-python-flask/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    dependency-injector==4.37.0
    Flask==2.0.2
    gunicorn==20.1.0
    pydantic==1.9.0

[options.packages.find]
where = src
